Add BlueMap region layer integration and database configuration support